--- a/docker-compose-cli.yaml
+++ b/docker-compose-cli.yaml
@@ -30,7 +30,7 @@ networks:
 
 services:
   webapp:
-    image: webapp
+    build: webapp/
     ports:
     - "3000:3000"
     depends_on:
@@ -50,7 +50,7 @@ services:
       - FABRIC_CA_SERVER_CA_NAME=ca-org1
       #- FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org1.example.com-cert.pem
-      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/8e8dbcb0c579309dbe80e253069e0d3fbeb5718142c5a8240ad132e84ea51872_sk
+      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/CA1_PRIVATE_KEY
     ports:
       - "7054:7054"
     command: sh -c 'cd /etc/hyperledger/fabric-ca-server-config/ && ls && printenv FABRIC_CA_SERVER_CA_KEYFILE && fabric-ca-server start -b admin:adminpw -d'
